1998-11-16  Paul Eggert

	Remove memory leak with valloced buffers, by invoking malloc instead.

	* configure.in (AC_CHECK_FUNCS), src/system.h (valloc): Remove.
	* src/grep.c (page_alloc): New function.
	(ubuffer, pagesize): New vars.
	(ALIGN_TO): New macro.
	(reset): Initialize new vars.  Check for overflow in buffer size calc.
	Use page_alloc instead of valloc.
	(fillbuf): Likewise.  Use memcpy to copy saved area.

1998-11-15  Paul Eggert

	* dfa.c (dfacomp), search.c (EGexecute): Don't assume char is unsigned.

1998-11-11  Alain Magloire

	* src/regex.c : On Apple, grep is overriding the regex library
	(recomp, etc.). Adding __private_extern__ in the declaration
	localizes the scope of that symbol for the linker, so it knows
	to use grep's regex routines rather than those in lib system.
	Done by Wilfredo Sanchez.

1998-11-10  Alain Magloire

	* src/vms_fab.{c,h}: New file for VMS wildcard expansion
	Written by Phillip C. Brisco.

	* vms/make.com : add line to compile vms_fab.c and 
	{e,f,}grepmat.c with link for each grep/fgrep/egrep.
	Base on patch send by Phillib C. Brisco.

1998-11-09  Alain Magloire

	* grep-2.2c on alpha for testing.

1998-11-09  Paul Eggert

	* src/grep.1: Fix `Last Change' of output by generating the date
	from the RCS Id.

	* src/grep.c (is_EISDIR): New macro.
	(grep): If -s, suppress errors from trying to read directories.
	(grepfile): Use is_EISDIR to simplify code.
	(grepdir): If -s, suppress errors from trying to read directories.

	* src/grep.1: Fix -q -r -s problems; describe BSD grep better.

	* src/grep.c (main): Update copyright.

	Specify default matcher with default_matcher extern var, not
	DEFAULT_MATCHER macro.  This is more straightforward and means
	we need to compile grep.c just once.

	* src/egrepmat.c, src/fgrepmat.c, src/grepmat.c: New files.

	* src/Makefile.am (base_sources): New macro.
	(egrep_SOURCES, fgrep_SOURCES, grep_SOURCES): Now consist of
	$(base_sources) plus the single tailoring file.